<resources>
    <string name="app_name">Fast E.R. Italy</string>

    <!-- Drawer voices -->
    <string name="menu_addresses">Registered Addresses</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_quit">Exit the app</string>
    <string name="user_options">User Options</string>
    <string name="session_options">Session</string>
    <!-- Fragments in main page -->
    <string name="e_r_next_me"><![CDATA[Emergency Rooms\n—> next to me]]></string>
    <string name="e_r_next_addr"><![CDATA[Emergency Rooms\n—> next to address]]></string>
    <string name="drug_next_me"><![CDATA[Pharmacies\n—> next to me]]></string>
    <string name="drug_next_addr"><![CDATA[Pharmacies\n—> next to address]]></string>
    <string name="history">Visit History</string>
    <string name="quit">Close the app</string>
    <string name="history_menu">History</string>
    <!-- Activity Names -->
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_signup" translatable="false">SignupActivity</string>
    <string name="title_activity_full_settings_scrolling" translatable="false">FullSettingsScrollingActivity</string>
    <string name="title_activity_main_settings" translatable="false">Settings</string>
    <string name="title_activity_search_on_map_activity" translatable="false">SearchOnMapActivity</string>
    <string name="title_activity_on_search_map__map__fragment" translatable="false">Map</string>
    <!-- Dialog Auth -->
    <string name="disconnecting_action">Disconnecting…</string>
    <string name="auth_error">Error, authentication hasn\'t take place</string>
    <!-- Tabbed Map View -->
    <string name="tab_text_1">Map</string>
    <string name="tab_text_2">Result List</string>
    <string name="tabbed_addr_bar_text_Drugs">Pharmacies in the address area:</string>
    <string name="tabbed_addr_bar_text_ER">E.R. in the address area:</string>
    <string name="tabbed_normal_bar_text_Drugs">Pharmacies in my area:</string>
    <string name="tabbed_normal_bar_text_ER">E.R. in my area:</string>
    <string name="no_addresses_found">No registered address found</string>
    <string name="choose_an_address">Choose an address</string>
    <string name="set_an_address">Set an address</string>
    <!-- Maps -->
    <string name="your_position">Your position</string>
    <string name="view_details_page">More detailed info</string>
    <string name="start_maps_navigation">Start navigation</string>
    <!-- TableView Helpers -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <!-- Header Translations -->
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="place_name">Name</string>
    <string name="address">Address</string>
    <string name="tot_queue"># in queue</string>
    <string name="opening_time">Opening time</string>

    <string name="no_gps_permission">No position access permission found</string>
    <string name="add_permission">Grant</string>
    <string name="fuctions_not_available_message">Some functions may be not available</string>
    <string name="activate_gps_message">Please grant position access permissions to use this function</string>
    <string name="activate_permissions_toast">Grant permissions under "Permissions" voice in the list</string>
    <string name="no_gps_active">No geolocalization signal available</string>
    <string name="people_in_queue">People in queue:</string>
    <string name="error_maps">Error:  can\'t launch navigation</string>
    <string name="no_internet">No internet connection available</string>
    <string name="avg_vote">Average of user votes</string>
    <string name="found_internet">Internet connection now available</string>
    <string name="now_open">Now open</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="title_activity_place_info" translatable="false">PlaceInfoActivity</string>

    <string name="action_settings">Settings</string>
    <string name="location_information">Location information:</string>
    <string name="er_queue_information">Real-time information:</string>
    <string name="detailed_votes">Detailed average of users\' votes:</string>
    <string name="drug_opening_time">Opening time:</string>
    <string name="vote_submitted">Vote successfully submitted</string>
    <string name="error_submission">Modification not registered, an error occurred</string>
    <string name="vote_rejected">Your submission has been rejected - (vote limit reached today)</string>
    <string name="ER_details_title">E.R. Details</string>
    <string name="DRUG_details_title">Pharmacy Details</string>
    <string name="vote_current_location">Vote current location:</string>
    <string name="vote_waiting_voice">Waiting time:</string>
    <string name="vote_structure_voice">Structure evaluation:</string>
    <string name="vote_service_voice">Service evaluation:</string>
    <string name="submit_vote">Submit</string>

    <string name="address_details_title">Address:</string>
    <string name="Name_details_title">Name:</string>
    <string name="wait_queue_details_title">Waiting:</string>
    <string name="treatment_queue_details_title">In treatment:</string>
    <string name="observation_queue_details_title">Under observation:</string>
    <string name="call_update">Update</string>
    <string name="average_of_votes_details_title">Average of global votes:</string>
    <string name="error_settings1">Error while loading user settings:\n\n</string>
    <string name="error_settings2">\n\nDefault settings will be used.\nClose and reopen to try again</string>
    <string name="title_activity_history">History</string>
    <string name="no_results_found">No results found</string>
    <string name="delete">Delete</string>
    <string name="vote_current_update">Update selected votes:</string>
    <string name="done">Done !</string>
    <string name="address_rejected">Modification rejected</string>
    <string name="add">Add</string>
    <string name="range_search">Results to be shown around the user:</string>
    <string name="activate_background_service">Track near reached hospitals:</string>
    <string name="search_address">Write below to search and insert a new address:</string>
    <string name="cancel">Cancel</string>
    <string name="update_selected_address">Update this address</string>

    <string name="facebook_application_id" translatable="false">here your app id</string>
    <string name="fb_login_protocol_scheme" translatable="false">here your scheme</string>
    <string name="no_user_authenticated">No authenticated user</string>
    <string name="tracking_not_active">Tracking function not activated due to lack of app permissions</string>
    <string name="mail_not_verified">"Email is not verified. A verification email has been sent to: "</string>
    <string name="delete_rejected">Delete rejected, you can\'t delete votes created today.</string>
    <string name="while_modify">Updating</string>
    <string name="while_delete">Deleting</string>
    <string name="while_create">Creating</string>
    <string name="postion_tracking_active">Tracking position</string>
    <string name="click_to_expand">Click here to expand</string>
    <string name="call_vote">Vote</string>
    <string name="ignore">Ignore</string>
    <string name="stop">Stop</string>
    <string name="no_er_reached">No ER reached yet</string>
    <string name="er_reached">An ER is near</string>
    <string name="home">Home</string>

</resources>
