<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/big_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingBottom="1dp"
            android:paddingLeft="4dp"
            android:paddingRight="6dp"
            android:src="@drawable/pin_map_cross_1"/>

        <ImageView
            android:id="@+id/small_icon"
            android:layout_width="18.2dp"
            android:layout_height="18.2dp"
            android:layout_alignBottom="@id/big_icon"
            android:layout_alignRight="@id/big_icon"
            android:src="@drawable/fui_ic_check_circle_black_128dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/notification_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/icon_container"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="6dp">

        <TextView
            android:id="@+id/content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postion_tracking_active"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"/>

        <TextView
            android:id="@+id/content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_er_reached"
            android:textAppearance="@style/TextAppearance.Compat.Notification"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_container"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp">
            <TextView android:id="@+id/hospital_name"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name_details_title"
                android:textSize="15sp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
            <TextView android:id="@+id/hospital_address"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_details_title"
                android:textSize="15sp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_vote"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/left_button"
            style="@style/Widget.Compat.NotificationActionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_vote"
            android:textAppearance="@style/Widget.Compat.NotificationActionText"/>

        <Button
            android:id="@+id/right_button"
            style="@style/Widget.Compat.NotificationActionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ignore"
            android:textAppearance="@style/Widget.Compat.NotificationActionText"/>
    </LinearLayout>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="3.5dp"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"/>

</RelativeLayout>