<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    android:paddingBottom="1dp">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:textColor="@color/white"
    android:background="@color/colorPrimaryDarker"
    android:paddingBottom="5dp">

    <TextView android:id="@+id/vote_dialog_hospital_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin_small"
        android:paddingRight="@dimen/activity_horizontal_margin_small"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_information"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <View android:id="@+id/separator_dialog01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin_small"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
        app:layout_constraintTop_toBottomOf="@+id/vote_dialog_hospital_title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"/>
    <TextView android:id="@+id/hospital_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name_details_title"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_dialog01"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView android:id="@+id/hospital_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_details_title"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospital_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <View android:id="@+id/separator_dialog02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin_small"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
        app:layout_constraintTop_toBottomOf="@+id/hospital_address"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"/>

    <TextView android:id="@+id/vote_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin_small"
        android:paddingRight="@dimen/activity_horizontal_margin_small"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_current_update"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/separator_dialog02"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <View android:id="@+id/separator_dialog1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin_small"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
        app:layout_constraintTop_toBottomOf="@+id/vote_dialog_title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"/>
    <TextView android:id="@+id/vote_1_voice_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_waiting_voice"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_dialog1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <RatingBar
        style="@style/RatingBar_Dialog"
        android:id="@+id/ratingBar_wait"
        android:isIndicator="false"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/darkorange"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_1_voice_title"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0" />

    <TextView android:id="@+id/vote_2_voice_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_structure_voice"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar_wait"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <RatingBar
        style="@style/RatingBar_Dialog"
        android:id="@+id/ratingBar_structure"
        android:progressTint="@color/darkorange"
        android:isIndicator="false"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_2_voice_title"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0" />
    <TextView android:id="@+id/vote_3_voice_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_service_voice"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar_structure"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <RatingBar
        style="@style/RatingBar_Dialog"
        android:id="@+id/ratingBar_service"
        android:progressTint="@color/darkorange"
        android:isIndicator="false"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vote_3_voice_title"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0" />
    <Button android:id="@+id/update_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        app:layout_goneMarginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/ratingBar_service"
        android:background="#008efb"
        android:text="@string/call_update"/>

    <Button android:id="@+id/delete_vote_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin_small"
        android:paddingRight="@dimen/activity_horizontal_margin_small"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintLeft_toRightOf="@id/update_button"
        app:layout_constraintStart_toEndOf="@+id/ratingBar_service"
        app:layout_constraintBottom_toBottomOf="@id/update_button"

        android:background="#008efb"
        android:text="@string/delete"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>